--- a/package.json
+++ b/package.json
@@ -18,20 +18,21 @@
 	},
 	"homepage": "https://github.com/tnguyen42/cryptozombies-fall1#readme",
 	"devDependencies": {
+		"@babel/core": "^7.14.0",
+		"@babel/eslint-parser": "^7.13.14",
 		"@nomiclabs/hardhat-ethers": "^2.0.2",
 		"@nomiclabs/hardhat-waffle": "^2.0.1",
 		"chai": "^4.3.4",
+		"eslint": "^7.26.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^3.4.0",
 		"ethereum-waffle": "^3.4.0",
 		"ethers": "^5.4.7",
 		"hardhat": "^2.6.6",
-		"prettier": "2.4.1",
-		"@babel/core": "^7.14.0",
-		"@babel/eslint-parser": "^7.13.14",
-		"eslint": "^7.26.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-prettier": "^3.4.0"
+		"prettier": "2.4.1"
 	},
 	"dependencies": {
+		"dotenv": "^10.0.0",
 		"solc": "^0.8.7-fixed"
 	}
 }
