--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "npx hardhat test",
-		"compile": "npx hardhat compile"
+		"compile": "npx hardhat compile",
+		"deploy:ropsten": "npx hardhat run scripts/deploy.js --network ropsten"
 	},
 	"repository": {
 		"type": "git",
